# TerraHerb

./: .gitignore  API_SPECIFICATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROLS.md  CURRENT_STATUS.md  EVALUATION_HARNESS.md  FUTURE_CHANGES.md  LICENSE  ONBOARDING.md  POTENTIAL.md  PROJECT_DETAILS.md  README.md  README_REPORT.md  RISK_MODEL.md  SATURATION.md  SCALING.md  SECURITY.md  SETUP_GUIDE.md  VALIDATION.md  docker-compose.yml  main.py  pubspec.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  ci.yml  flutter-ci.yml
backend/: .env.example  Dockerfile  Makefile  README.md  go.mod
configs/: default_training.yaml
doc/: ARCHITECTURE.md  CRITICAL_WARNINGS.md  FUTURE_SCOPE.md  GLOSSARY.md  GUARDRAILS.md  INDEX.md  INTERVIEW_QUESTIONS.md  MOTIVATION.md  MULTI_NODE.md  OPERATIONS.md  README.md  REQUIREMENTS.md  RISK_REGISTER.md  ROADMAP.md  TASKS.md  TECHNOLOGIES.md  USER_GUIDE.md
docs/: ARCHITECTURE.md  CHANGELOG.md  DATASET.md  DEPLOYMENT.md  MODEL.md  PPT_STRUCTURE.md  PRODUCT_VISION.md  PROJECT_DETAILS.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SECURITY.md  SETUP.md  UI_UX_RATIONALE.md
frontend/: index.html  package-lock.json  package.json
lib/: main.dart
linux/: CMakeLists.txt
notebooks/: model_training_report.md
scripts/: check-health.sh  doctor.sh  relocate-datasets.sh
test/: widget_test.dart
tests/: test_api.py  test_inference.py  test_model.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+65 files in other folders)
